# heterogenous_parallelization_KZZ

Assignment3/Assignment_3/: CMakelists.txt  README.MD  main.cu
Assignment4/: README.md  ссылка_assignment4.docx
Assignment4/Assignment_4/task1_cuda_reduce/: CMakeLists.txt  main.cu
Assignment4/Assignment_4/task2_cuda_scan/: CMakeLists.txt  main.cu
Assignment4/Assignment_4/task3_hybrid/: CMakeLists.txt  main.cu
Assignment4/Assignment_4/task4_mpi/: CMakeLists.txt  main.cpp
assignment1/: CMakeLists.txt  README.md  assignment1.cpp
assignment2/assignment2/: CMakeLists.txt  README.md  cpu_openmp.cpp  gpu_cuda.cu
practice1/: CMakeLists.txt  practice1.cpp
practice10/: ссылка_practice10.docx
practice10/practice_10/: CMakeLists.txt  README.md
practice10/practice_10/include/: utils.h
practice10/practice_10/src/: task1_omp.cpp  task2_cuda.cu  task3_hyb.cu  task4_mpi.cpp
practice2/: CMakeLists.txt  README.md  practice2.cpp
practice3/: CMakeLists.txt  README.md
practice3/include/: sorting.h
practice3/src/: cpu_sorts.cpp  gpu_sorts.cu  main.cpp
practice4/: ссылка.docx
practice4/practice_4/: CMakeLists.txt  README.md  gpu_memory.cu  main.cu  memory_ops.h
practice5/: ссылка.docx
practice5/practice_5/: CMakeLists.txt  README.md  gpu_structures.cu  main.cu  structures.h
practice6/: ссылка_practice6.docx
practice6/practice_6/: CMakeLists.txt  README.md  kernel_matmul.cl  kernel_vector_add.cl  main.cpp  opencl_utils.cpp  opencl_utils.h
practice7/: ссылка_practice7.docx
practice7/practice_7/: CMakeLists.txt  README.md
practice7/practice_7/include/: utils.h
practice7/practice_7/src/: main.cu
practice8/: ссылка_practice8.docx
practice8/practice_8/: CMakeLists.txt  README.md
practice8/practice_8/include/: utils.h
practice8/practice_8/src/: main.cu
practice9/: ссылка_practice9.docx
practice9/practice_9/: CMakeLists.txt  README.md
practice9/practice_9/include/: mpi_utils.h
practice9/practice_9/src/: main.cpp
